--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "chance": "^1.1.0",
     "faker": "^4.1.0",
     "markdown": "^0.5.0",
+    "momento": "^0.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
