--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "faker": "^4.1.0",
     "markdown": "^0.5.0",
     "momento": "^0.2.0",
+    "momentous": "^0.0.5",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
