--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "casual": "^1.6.2",
     "chance": "^1.1.0",
     "faker": "^4.1.0",
     "markdown": "^0.5.0",
